fix code fourth homework (2) after review